--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "lodash": "^4.17.19",
     "next": "latest",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-hook-form": "^6.2.0",
+    "react-select": "^3.1.0",
+    "reactstrap": "^8.5.1"
   },
   "devDependencies": {
     "postcss-flexbugs-fixes": "4.2.1",
